--- a/styles/main.css
+++ b/styles/main.css
@@ -700,8 +700,14 @@ dfn{
 font-style:italic
 }
 h1{
-font-size:2em;
-margin:0.67em 0
+    display: block;
+    font-size: 2em;
+	margin-before: 0.67em;
+    margin-after: 0.67em;
+    margin-start: 0px;
+	margin-end: 0px;
+    font-weight: bold;
+	text-shadow:0px 0px 0 rgb(217,217,217),-1px 1px 0 rgb(189,189,189),-2px 2px 0 rgb(162,162,162),-3px 3px 0 rgb(134,134,134),-4px 4px 0 rgb(106,106,106),-5px 5px 0 rgb(78,78,78), -6px 6px 0 rgb(50,50,50),-7px 7px 6px rgba(0,0,0,1),-7px 7px 1px rgba(0,0,0,0.5),0px 0px 6px rgba(0,0,0,.2);}
 }
 mark{
 background:#ff0;
@@ -4697,7 +4703,7 @@ text-transform:uppercase;
 color:#455155;
 z-index:1;
 pointer-events:none;
-position:relative
+position:relative;
 }
 @media (min-width: 48em){
 .home-stt{
@@ -4708,8 +4714,8 @@ letter-spacing:8px
 }
 @media (min-width: 64em){
 .home-stt{
-font-size:12.2rem;
-letter-spacing:12px
+font-size:8rem;
+letter-spacing:-5px
 }
 
 }
