--- a/styles/main.css
+++ b/styles/main.css
@@ -707,7 +707,6 @@ h1{
     margin-start: 0px;
 	margin-end: 0px;
     font-weight: bold;
-	text-shadow:0px 0px 0 rgb(217,217,217),-1px 1px 0 rgb(189,189,189),-2px 2px 0 rgb(162,162,162),-3px 3px 0 rgb(134,134,134),-4px 4px 0 rgb(106,106,106),-5px 5px 0 rgb(78,78,78), -6px 6px 0 rgb(50,50,50),-7px 7px 6px rgba(0,0,0,1),-7px 7px 1px rgba(0,0,0,0.5),0px 0px 6px rgba(0,0,0,.2);}
 }
 mark{
 background:#ff0;
@@ -4700,7 +4699,7 @@ font-size:62px;
 font-size:6.2rem;
 letter-spacing:6px;
 text-transform:uppercase;
-color:#455155;
+color:#4ac1b4;
 z-index:1;
 pointer-events:none;
 position:relative;
