--- a/styles/main.css
+++ b/styles/main.css
@@ -4750,10 +4750,28 @@ animation-delay:1.5s
 	.logo_1 {
 	white-space: nowrap;
 	margin-left: 65px;
-    margin-top: -53px;
+    margin-top: -5px;
     font-size: large;
 	color: #455155;
-
+	letter-spacing:1px;
+	line-height: 1.1;
+}
+	
+@media screen and (max-width: 1280px) {
+div.logo_1 {width: 1100px;}
+	margin-top: -57px;
+    margin-left: 65px;
+    font-size: 12px;
+    white-space: nowrap;
+    line-height: 1.8;
+}
+@media screen and (max-width: 1024px) {
+div.logo_1 {width: 980px;}
+	margin-top: -57px;
+    margin-left: 65px;
+    font-size: 12px;
+    white-space: nowrap;
+    line-height: 1.8;
 }
 
 }
