--- a/styles/main.css
+++ b/styles/main.css
@@ -3518,6 +3518,39 @@ line-height:1.2
 		margin-top: 4px;
 		cursor: pointer;
 	}
+/*Window*/
+	#wrap1{
+		display: none;
+		opacity: 0.8;
+		position: fixed;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		padding: 16px;
+		background-color: rgba(1, 1, 1, 0.725);
+		z-index: 100;
+		overflow: auto;
+	}
+	#window1{
+		width: 400px;
+		height: 400px;
+		margin: 50px auto;
+		display: none;
+		background: #fff;
+		z-index: 200;
+		position: fixed;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		padding: 16px;
+	}
+	.close1{
+		margin-left: 345px;
+		margin-top: 4px;
+		cursor: pointer;
+	}
 .text_modal{
 	font-size: inherit;
     color: black;
@@ -4796,8 +4829,49 @@ animation-delay:1.5s
 	letter-spacing:1px;
 	line-height: 1.1;
 }
-
 }
+
+@media (max-width: 55em){
+	.logo_1{
+	white-space: nowrap;
+    margin-left: 65px;
+    margin-top: -55px;
+    font-size: large;
+    color: #455155;
+    letter-spacing: 1px;
+    line-height: 1.1;
+	}
+}
+@media (max-width: 478px){
+	.logo_1{
+	font-size:15px;
+	}
+}
+@media (max-width: 432px){
+	.logo_1{
+	margin-top:-35px;
+	font-size:12px;
+
+	}
+}
+@media (max-width: 400px){
+	.logo_1{
+	margin-top:-50px;
+	font-size:11px;
+	}
+}
+@media (max-width: 400px){
+	.l-site-header{
+	padding-left:0;
+	}
+}
+
+@media (max-width: 432px){
+	#logo{
+	display:none;
+	}
+}
+
 .job-fit{
 opacity:0;
 max-height:0;
